@@ -1,11 +1,11 @@
-name: Ubuntu-flatpak
+name: "Build Linux Flatpak"
 
 on:
   release:
     types: [created]
 
 jobs:
-  build-flatpak-bundle:
+  build-linux-flatpak:
     name: ubuntu-flatpak
     runs-on: ubuntu-latest
 
